--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Invited talks, Presentations, and Press"
 permalink: /talks/
 author_profile: true
 ---
